Fixed Scrolling issue on mobile

--- a/source/styles.css
+++ b/source/styles.css
@@ -279,6 +279,7 @@ body {
 .content-section {
     display: none;
     animation: fadeIn 0.5s ease;
+    scroll-margin-top: 600px;
 }
 
 .content-section.active {
